# lucky

./: CLAUDE.md  README.md  index.html  package.json
docs/: AGENT_FEATURES.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/borderless/: mod.rs
src-tauri/src/borderless/agent/: agent_loop.rs  autonomous_loop.rs  builder.rs  harness.rs  instance.rs  mod.rs
src-tauri/src/borderless/agent_core/: errors.rs  llm.rs  mod.rs  pricing.rs  provider_meta.rs  retry.rs  token.rs  types.rs
src-tauri/src/borderless/context/: context_builder.rs  guardrails.rs  mod.rs  token.rs
src-tauri/src/borderless/mcp/: client.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/borderless/memory/: manager.rs  mod.rs  retrieval.rs  sanitizer.rs  store.rs
src-tauri/src/borderless/providers/: anthropic.rs  embeddings.rs  google.rs  mod.rs  openai.rs  sse.rs
src-tauri/src/borderless/session/: cloud_backend.rs  file_backend.rs  manager.rs  mod.rs  store.rs
src-tauri/src/borderless/skills/: lifecycle.rs  mod.rs  registry.rs
src-tauri/src/borderless/telemetry/: exporter.rs  metrics.rs  mod.rs  span.rs  telemetry.rs
src-tauri/src/borderless/tools/: builtin.rs  executor.rs  mod.rs  registry.rs  sandbox.rs
src/history/: HistoryApp.css  HistoryApp.tsx
src/settings/: SettingsApp.css  SettingsApp.tsx
