[package]
name = "lucky"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "lucky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["openai"]
openai = []
anthropic = []
google = []
embeddings = []
cloud-storage = ["dep:aws-sdk-s3", "dep:aws-config"]
mcp = []
full = ["openai", "anthropic", "google", "embeddings", "cloud-storage", "mcp"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Utilities
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dashmap = "6"
urlencoding = "2"

# Optional: cloud storage
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
